# Datathon_Fase5

./: LInks para Datathon.txt  README.md  pyproject.toml
Dashboards/: tech_5 - Pag 1.pbix  tech_5 - Pag 2.pbix
app/: app.py  textos.py
