[tool.poetry]
name = "datathon-fase5"
version = "0.1.0"
description = ""
authors = ["Victor Barros <victorbarros51@gmail.com>"]
readme = "README.md"
packages = [{include = "datathon_fase5"}] 

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
streamlit = "^1.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
